@@ -214,7 +214,6 @@ bool WMHelper::isCinnamonRunning(){
   QProcess proc;
   slParam << "-A";
   slParam << "-o command";
-
   proc.start("ps", slParam);
   proc.waitForStarted();
   proc.waitForFinished();
@@ -228,22 +227,18 @@ bool WMHelper::isCinnamonRunning(){
 }
 
 /*
- * Checks if RazorQt is running
+ * Checks if Lumina is running
  */
-bool WMHelper::isRazorQtRunning()
+bool WMHelper::isLuminaRunning()
 {
-  QStringList slParam;
   QProcess proc;
-  slParam << "-A";
-  slParam << "-o command";
-
-  proc.start("ps", slParam);
+  proc.start("ps -A -o command");
   proc.waitForStarted();
   proc.waitForFinished();
   QString out = proc.readAll();
   proc.close();
 
-  if (out.count(ctn_RAZORQT_DESKTOP)>0)
+  if (out.count(ctn_LUMINA_DESKTOP)>0)
     return true;
   else
     return false;
@@ -289,15 +284,6 @@ QString WMHelper::getKDESUCommand(){
   result += " --noignorebutton ";
   result += " -c";
 
-  return result;
-}
-
-/*
- * Retrieves the QSUDO command...
- */
-QString WMHelper::getQSUDOCommand()
-{
-  QString result = ctn_QSUDO;
   return result;
 }
 
@@ -400,6 +386,10 @@ void WMHelper::openFile(const QString& fileName){
     s << fileToOpen;
     p->startDetached( ctn_LXQT_FILE_MANAGER, s );
   }
+  else if (isLuminaRunning() && UnixCommand::hasTheExecutable(ctn_LUMINA_OPEN)){
+    s << fileToOpen;
+    p->startDetached( ctn_LUMINA_OPEN, s );
+  }
   else if (UnixCommand::hasTheExecutable(ctn_ARCHBANG_FILE_MANAGER)){
     s << fileToOpen;
     p->startDetached( ctn_ARCHBANG_FILE_MANAGER, s );
@@ -429,6 +419,9 @@ void WMHelper::editFile( const QString& fileName, EditOptions opt ){
   }
   else if (isLXQTRunning() && UnixCommand::hasTheExecutable(ctn_LXQT_EDITOR)){
     p = ctn_LXQT_EDITOR + " " + fileName;
+  }
+  else if (isLuminaRunning() && UnixCommand::hasTheExecutable(ctn_LUMINA_EDITOR)){
+    p += ctn_LUMINA_EDITOR + " " + fileName;
   }
   else if (UnixCommand::hasTheExecutable(ctn_ARCHBANG_EDITOR))
   {
@@ -541,6 +534,11 @@ void WMHelper::openDirectory( const QString& dirName ){
     {
       s << dir;
       p->startDetached( ctn_LXQT_FILE_MANAGER, s );
+    }
+    else if (isLuminaRunning() && UnixCommand::hasTheExecutable(ctn_LUMINA_FILE_MANAGER))
+    {
+      s << dir;
+      p->startDetached( ctn_LUMINA_FILE_MANAGER, s );
     }
     else if (UnixCommand::hasTheExecutable(ctn_XFCE_FILE_MANAGER))
     {
